added the bart and updated discrioptions

--- a/_posts/2017-05-01-yescoach.md
+++ b/_posts/2017-05-01-yescoach.md
@@ -10,8 +10,11 @@ thumbnail-img: /assets/img/yescoach.jpg
 tags: [fitness, Angular, Ionic, web technologies, mobile app, health]
 comments: true
 ---
-YesCoach is a hobby project I started in 2017 and halted in 2018. it was my introduction to the world of web technologies. I developed it as a web app product to empower people to plan their workouts through an intuitive interface; it also has the functionality to make a program and track progress. The app is developed using the Ionic framework and Angular. The app is available on the web and can be accessed here: [YesCoach](https://yes-coach.web.app/). The app is best browsed in mobile view.
+YesCoach is LIVE web app product to empower people to plan their workouts through an intuitive interface; it also has the functionality to make a program and track progress
 
+It is a hobby project I started in 2017 and maintain minimally till now. it was my introduction to the world of web technologies. The app is developed using the Ionic framework and Angular. The app is available on the web and can be accessed here: [YesCoach](https://yes-coach.web.app/). The app is best browsed in mobile view.
+
+The steps I took to develop the app are as follows:
 - Designed user graphics and experience design mode in Adobe XD.
 - Technologies used: HTML, CSS, JavaScript and Angular. 
 - Database management and behaviour analytics through Google Cloud Platform.
