added the bart and updated discrioptions

--- a/_posts/2015-10-12-THE-BART.md
+++ b/_posts/2015-10-12-THE-BART.md
@@ -5,7 +5,7 @@ subtitle: Your public transit guide to the Bay Area
 gh-repo: Beshario/The-Bart
 # gh-badge: [star, fork, follow]
 # cover-img: /assets/img/path.jpg
-thumbnail-img: /assets/img/yescoach.jpg
+thumbnail-img: /assets/img/BART/4.bmp
 
 tags: [PHP, HTML, CSS, JavaScript, MySQL, Google Maps API, BART API]
 comments: true
