imporvements, + added pdf resume

--- a/_posts/2015-10-12-THE-BART.md
+++ b/_posts/2015-10-12-THE-BART.md
@@ -10,7 +10,7 @@ thumbnail-img: /assets/img/BART/4.bmp
 tags: [PHP, HTML, CSS, JavaScript, MySQL, Google Maps API, BART API]
 comments: true
 ---
-# THE BART
+A mashup project utilizing PHP as backend, Javascript- Jquery, Ajax: XML and JSON and google maps abd BART apis to create a public transit guide to the Bay Area. 
 
 ## INTRODUCTION
 This project is part of an audited online course I used to teach myself Web Development. The course is: [Building Dynamic Websites](http://cs75.tv/2012/summer/) by Harvard University
@@ -42,5 +42,3 @@ The homepage must provide the user with a method of choosing one BART route at a
 ![BART](/assets/img/BART/3.bmp)
 
 ![BART](/assets/img/BART/4.bmp)
-
-![BART](/assets/img/BART/5.bmp)
