--- a/_posts/2017-05-01-yescoach.md
+++ b/_posts/2017-05-01-yescoach.md
@@ -18,7 +18,7 @@ The steps I took to develop the app are as follows:
 - Designed user graphics and experience design mode in Adobe XD.
 - Technologies used: HTML, CSS, JavaScript and Angular. 
 - Database management and behaviour analytics through Google Cloud Platform.
-- Auxilary app to input exercises.
+- Auxilary CRUD web app to input exercises into the database.
 
 The following are some screenshots of the app and the marketing materials:
 
