--- a/_posts/2015-10-12-THE-BART.md
+++ b/_posts/2015-10-12-THE-BART.md
@@ -7,29 +7,24 @@ gh-repo: Beshario/The-Bart
 # cover-img: /assets/img/path.jpg
 thumbnail-img: /assets/img/BART/4.bmp
 
-tags: [PHP, HTML, CSS, JavaScript, MySQL, Google Maps API, BART API]
+tags: [Web technologies, Education]
 comments: true
 ---
-A mashup project utilizing PHP as backend, Javascript- Jquery, Ajax: XML and JSON and google maps abd BART apis to create a public transit guide to the Bay Area. 
+"The Bart" is a public transit guide to the Bay Area, developed as part of an audited online course [Building Dynamic Websites](http://cs75.tv/2012/summer/) by J. Malan at Harvard. It is designed as a mashup project utilizing various technologies to enhance the user experience in visualizing BART (Bay Area Rapid Transit) routes.
 
-## INTRODUCTION
-This project is part of an audited online course I used to teach myself Web Development. The course is: [Building Dynamic Websites](http://cs75.tv/2012/summer/) by Harvard University
+### Problem
+Public transit users in the Bay Area need an intuitive and accessible way to visualize BART routes, including the ability to see when the next trains depart or arrive at various stations. The goal is to create a system that not only maps routes but also integrates real-time data according to the specifications provided [HERE](http://cdn.cs75.net/2012/summer/projects/2/project2.pdf).
 
-## PROBLEM
-The mission for this project is to implement The Bart, a mashup that allows users to visualize BART routes on a Google Maps and also click stations to see when the next trains depart (or arrive).
+### Action
+To address this challenge, the following actions were taken:
+1. **Designing the Homepage:** A user-friendly interface was developed to allow users to choose one BART route at a time.
+2. **Integration with BART Server:** Routes were drawn as polylines on Google Maps in the official color of the route, with markers representing each station.
+3. **Real-Time Information:** Clicking on each station triggers an info window summarizing the next trains departing or arriving.
+4. **Technologies Used:** The backend was built with PHP, Javascript-Jquery, Ajax (XML and JSON), along with third-party APIs like Google Maps and BART API. SQL (MySQL) was used for [Web caching](https://en.wikipedia.org/wiki/Web_cache).
 
-According to the spicification specified [HERE](http://cdn.cs75.net/2012/summer/projects/2/project2.pdf)
+### Impact
+"The Bart" project successfully provided a dynamic and interactive guide for Bay Area commuters, allowing them to visualize and plan their trips using BART efficiently. By leveraging modern web technologies and integrating real-time data, it elevated the public transit experience and set a precedent for future developments in the field of transit guides.
 
-## SPECIFICATIONS
-The homepage must provide the user with a method of choosing one BART route at a time. Once selected, a route should is drawn as polylines on the map based on inputs from the BART server, in the route’s official color, with markers representing each of that route’s stations. Each station, when clicked, triggers an info window that summarizes the next Trains departing from (or arriving at) that station.
-
-## TECHNOLOGIES USED
-
-*	php
-*	Javascript- Jquery
-*	Ajax: XML and JSON.
-*	Third party APIs (Google Maps, BART API)
-*	SQL (MySQL) for [Web caching](https://en.wikipedia.org/wiki/Web_cache)
 
 ### Screenshots
 
