--- a/_posts/2017-05-01-yescoach.md
+++ b/_posts/2017-05-01-yescoach.md
@@ -10,17 +10,27 @@ thumbnail-img: /assets/img/yescoach.jpg
 tags: [fitness, Angular, Ionic, web technologies, mobile app, health]
 comments: true
 ---
-YesCoach is LIVE web app product to empower people to plan their workouts through an intuitive interface; it also has the functionality to make a program and track progress
+YesCoach is a LIVE web application designed to empower users to plan, track, and make progress in their workouts through an intuitive interface. Started as a hobby project in 2017, it serves as an introduction to the fascinating world of web technologies and continues to be minimally maintained.
 
-It is a hobby project I started in 2017 and maintain minimally till now. it was my introduction to the world of web technologies. The app is developed using the Ionic framework and Angular. The app is available on the web and can be accessed here: [YesCoach](https://yes-coach.web.app/). The app is best browsed in mobile view.
+### YesCoach: Empowering Workouts Through a Web App
 
-The steps I took to develop the app are as follows:
-- Designed user graphics and experience design mode in Adobe XD.
-- Technologies used: HTML, CSS, JavaScript and Angular. 
-- Database management and behaviour analytics through Google Cloud Platform.
-- Auxilary CRUD web app to input exercises into the database.
+#### Introduction
+YesCoach brings technology to fitness enthusiasts, allowing them to create personalized workout programs and monitor their development. Available on the web, it can be accessed [here](https://yes-coach.web.app/) and is best browsed in mobile view.
 
-The following are some screenshots of the app and the marketing materials:
+#### Problem
+The challenge was to create a user-friendly, accessible platform that would assist users in designing and adhering to their workout plans, integrating various technologies to ensure a seamless experience.
+
+#### Action
+The development process was divided into several key stages:
+1. **User Experience Design:** Graphics and experience design were meticulously crafted in Adobe XD.
+2. **Web Development:** Utilizing HTML, CSS, JavaScript, and Angular to build a responsive and engaging interface.
+3. **Database Management:** Integrated Google Cloud Platform for robust data management and behavior analytics.
+4. **Content Management:** Developed an auxiliary CRUD web app for exercise input into the database.
+
+#### Impact
+YesCoach has successfully bridged the gap between technology and fitness, offering users an innovative tool to enhance their workout experience. It stands as a testament to the creative application of modern web technologies and offers insights into potential future developments in fitness-tech integration.
+
+Below are some screenshots of the app and the marketing materials:
 
 ![YesCoach](/assets/img/YesCoach/rightattitude.jpg)
 
