--- a/_posts/2021-09-30-ASP.md
+++ b/_posts/2021-09-30-ASP.md
@@ -2,57 +2,48 @@
 layout: post
 title: MY WORK AT ASP INC.
 subtitle: Projects as part of ASP.
-# gh-repo: daattali/beautiful-jekyll
-# gh-badge: [star, fork, follow]
-# cover-img: /assets/img/path.jpg
 thumbnail-img: /assets/img/ASP/IMG_20210820_132441_989.jpg
-
 tags: [robotics, 3DCAD]
 comments: true
 ---
+During my tenure at [*Allied Scientific Pro*](https://www.alliedscientificpro.com/) from September 2019 to October 2021, I had the opportunity to work on several cutting-edge projects that pushed the boundaries of technology. In this post, I will delve into the problems we addressed, the actions we undertook to resolve them, and the broader impact these solutions had on various industries.
 
-After my tenure (Sept 2019 - Oct 2021) at [*Allied Scientific Pro*](https://www.alliedscientificpro.com/) came to an end. I wanted to document some of the hardware and software projects I worked on:
+### Laser Cleaning System
 
-### laser Cleaning system
-The laser cleaning system is handheld device that shoots laser at a specific distance to de-coat materials. It has applied applications in various industries such as restoration, aerospace, automotive, and nuclear. 
+#### Problem
+Traditional methods of material de-coating are often labor-intensive, time-consuming, and may not be suitable for delicate applications in restoration, aerospace, automotive, and nuclear industries.
 
-{: .box-note}
-**Note:** Some of the following images are clickable and will take you to more elaborate youtube videos
-
+#### Action
+We developed a handheld laser cleaning system that utilizes precise laser beams to target specific distances for de-coating materials. 
 
 [<center>
 <img src="/assets/img/ASP/IMG_20190920_150327.jpg" width="50%" />
 </center>](https://www.youtube.com/watch?v=HVhEawaYqg0&t=1s&ab_channel=AlliedScientificPro){:target="_blank"}
 
-### Automating the laser Cleaning process
-Proof of concept to automate the laser cleaning process using 3D sensors and a robotic arm, in scan-plan-execute fashion.  
-The process is when you add an object to a table top, the robot will 3D-reconstruct the object and generate a tool path to clean the object. The robot will then executes the path to clean the object using the laser.
+This innovation revolutionized the way materials are cleaned, providing a faster, more efficient, and delicate process, suitable for various industrial applications and used at Canada's Paraliment.
 
-This project was funded externally at the end of proof of concept and moved to prototype phase.
+### Automating the Laser Cleaning Process
 
-<!-- selfie with robot setup -->
+#### Problem
+The manual laser cleaning process was marked by human error and inefficiencies. It required a solution that could add precision and automation to the process.
+
+#### Action
+Designed a proof of concept to automate the laser cleaning process using 3D sensors and a robotic arm. This project was successful and funded externally, moving to the prototype phase.
+
 <img src=" /assets/img/LCSprocess.png" width="100%"/>
-[<center>
-<img src="/assets/img/ASP/IMG_20190308_110017.jpg" width="50%" />
-</center>](https://www.youtube.com/watch?v=HHuX_d9EQDY&ab_channel=AlliedScientificPro){:target="_blank"}
-
-<img src=" /assets/img/LCSrobot.png" width="100%"/>
 [<img src="/assets/img/ASP/robotcleaningmetalpipe.png" width="100%"/>](https://www.youtube.com/watch?v=GXSSPExhgnQ&ab_channel=AlliedScientificPro){:target="_blank"}
 
-*Moving to prototype*  
-<center>
-<img src="/assets/img/ASP/IMG_20210820_132441_989.jpg" width="50%"/>
-</center>
+#### Impact
+The automated system significantly improved the cleaning process, reducing human error, saving time, and increasing overall productivity in laser cleaning applications.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sedunP8pjbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+### Other Work
 
-### Other work
+Different tasks for different projects. 
 
-###### Mechanical design for internal and external clients
-
-- 3D CAD design, Engineering drawings, and BOMs for LCS and robotic arm products.
-- Robotic arm, pneumatic systems integration.
-- Safety system design, implementation, and testing.
+#### Action
+- Developed 3D CAD designs, engineering drawings, and BOMs for LCS and robotic arm products.
+- Integrated robotic arm and pneumatic systems.
+- Designed, implemented, and tested safety systems.
 
 <dev float="center">
 <img src=" /assets/img/cobot_real.jpg" width="49%"/>
@@ -61,12 +52,22 @@ This project was funded externally at the end of proof of concept and moved to p
 <img src=" /assets/img/ASP/IMG_20210709_141409.jpg" width="49%"/>
 </dev>
 
-###### Single Event Effects (SEEs) testing station
+#### Impact
+These projects strengthened our ability to deliver custom solutions to clients. They also helped us develop a better understanding of the challenges faced by various industries and how we can help them overcome these challenges.
 
-- Project management
-- Implementation, deployment and commissioning of the system.
+### Single Event Effects (SEEs) Testing Station
+
+#### Problem
+The occurrence of single event effects in electronic components can lead to serious performance issues. A specialized system was required to test and mitigate these effects using a laser.
+
+#### Action
+- Managed the project custom work and prdocution to completion.
+- Implemented, deployed, and commissioned a specialized testing system for SEEs.
 
 <p float="center">
 <img src=" /assets/img/SEE_cad.png" width="49%"/>
 <img src=" /assets/img/SEE-real.jpg" width="49%"/>
 </p>
+
+#### Impact
+The development of the SEEs testing station allowed for the robust evaluation and mitigation of single event effects, enhancing the resilience and reliability of electronic systems across various applications.
