spelling errors, updated resu,e

--- a/_posts/2015-10-12-THE-BART.md
+++ b/_posts/2015-10-12-THE-BART.md
@@ -10,7 +10,7 @@ thumbnail-img: /assets/img/BART/4.bmp
 tags: [Web technologies, Education]
 comments: true
 ---
-"The Bart" is a public transit guide to the Bay Area, developed as part of an audited online course [Building Dynamic Websites](http://cs75.tv/2012/summer/) by J. Malan at Harvard. It is designed as a mashup project utilizing various technologies to enhance the user experience in visualizing BART (Bay Area Rapid Transit) routes.
+"The Bart" is a public transit guide to the Bay Area, developed as part of an audited online course [Building Dynamic Websites](http://cs75.tv/2012/summer/) by David J. Malan at Harvard. It is designed as a mashup project utilizing various technologies to enhance the user experience in visualizing BART (Bay Area Rapid Transit) routes.
 
 ### Problem
 Public transit users in the Bay Area need an intuitive and accessible way to visualize BART routes, including the ability to see when the next trains depart or arrive at various stations. The goal is to create a system that not only maps routes but also integrates real-time data according to the specifications provided [HERE](http://cdn.cs75.net/2012/summer/projects/2/project2.pdf).
