--- a/_posts/2021-09-30-ASP.md
+++ b/_posts/2021-09-30-ASP.md
@@ -20,7 +20,7 @@ We developed a handheld laser cleaning system that utilizes precise laser beams 
 <img src="/assets/img/ASP/IMG_20190920_150327.jpg" width="50%" />
 </center>](https://www.youtube.com/watch?v=HVhEawaYqg0&t=1s&ab_channel=AlliedScientificPro){:target="_blank"}
 
-This innovation revolutionized the way materials are cleaned, providing a faster, more efficient, and delicate process, suitable for various industrial applications and used at Canada's Paraliment.
+This innovation revolutionized the way materials are cleaned, providing a faster, more efficient, and delicate process, suitable for various industrial applications and used at Canada's parliament.
 
 ### Automating the Laser Cleaning Process
 
