--- a/_posts/2023-05-05-Avidbots.md
+++ b/_posts/2023-05-05-Avidbots.md
@@ -15,12 +15,12 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 #### Development and Prototyping of AMR Navigation Sensor Layout
 - **3D Design:** Utilized Onshape for 3D design, 3D printing and sheet metal design, prototyping a new layout for AMR navigation sensors: Lidars, 3D sensors and RGB cameras..
-- **Driver Development:** Employed C++ and Python to develop the drivers necessary for integrating RGB cameras, lidars, and 3D cameras into the system. 
+- **Driver Development:** Employed C++ and Python to develop the drivers necessary for integrating RGB cameras, Lidars, and 3D cameras into the system. 
 - **Sensor Integration:** Integrated various sensors into Autonomy,calibration and monitoring systems.
-- **Sensor Qualification:** Conducted sensor qualification tests to ensure the functionilty of the sensors with the system. The system is a safety critical system and the sensors are a key component of the system.
+- **Sensor Qualification:** Conducted sensor qualification tests to ensure the functionality of the sensors with the system. The system is a safety critical system and the sensors are a key component of the system.
 
 #### Robotic Experiment Design
-- Designed and conducted experiments to test the performance of the AMR navigation sensor layout and other perceptino metrics
+- Designed and conducted experiments to test the performance of the AMR navigation sensor layout and other perception metrics
 - Conducted 2D and 3D vision data analysis on experiment data and for sensor testing and qualification.
 
 #### Transition from Simulation to Hardware
@@ -35,7 +35,7 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 ### Impact
 
-1. **Enhanced Sensor Integration:** The development and prototyping of a new Lidar, Led to the design of a laser manager that can accomodate different lidar models. 
+1. **Enhanced Sensor Integration:** The development and prototyping of a new Lidar, Led to the design of a laser manager that can accommodate different lidar models. 
 
 2. **Successful Transition to Hardware:** By leading the transition from simulation to hardware for the autonomous robot prototype, you ensured the compatibility and readiness of the system, moving it closer to real-world application.
    
@@ -53,4 +53,4 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 1. I have decided to to build my own autonomous robot as side project, and I am currently working on the design and development of the robot. This will help me to improve my skills get exposed to all different aspects of robotics and autonomy.
 
-2. I am also working to better myself as a software engineer finizling an [advanced C++ course](https://www.udacity.com/course/c-plus-plus-nanodegree--nd213){:target="_blank"} and [modern C++ Design Patterns](https://www.udemy.com/course/patterns-cplusplus/){:target="_blank"} and software engienering practices.
+2. I am also working to better myself as a software engineer finishing an [advanced C++ course](https://www.udacity.com/course/c-plus-plus-nanodegree--nd213){:target="_blank"},  [modern C++ Design Patterns](https://www.udemy.com/course/patterns-cplusplus/){:target="_blank"} and software engineering practices.
