--- a/_posts/2023-05-05-Avidbots.md
+++ b/_posts/2023-05-05-Avidbots.md
@@ -51,6 +51,6 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 ### Next Steps
 
-1. I have decided to to build my own autonomous robot as side project, and I am currently working on the design and development of the robot. This will help me to improve my skills get exposed to all different aspects of robotics and autonomy.
+1. I have decided to build my own autonomous robot as A side project, and I am currently working on the design and development of the robot. This will help me improve my skills AND get exposed to all different aspects of robotics and autonomy.
 
 2. I am also working to better myself as a software engineer finishing an [advanced C++ course](https://www.udacity.com/course/c-plus-plus-nanodegree--nd213){:target="_blank"},  [modern C++ Design Patterns](https://www.udemy.com/course/patterns-cplusplus/){:target="_blank"} and software engineering practices.
