--- a/_posts/2023-05-05-Avidbots.md
+++ b/_posts/2023-05-05-Avidbots.md
@@ -36,20 +36,20 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 1. **Enhanced Sensor Integration:** The development and prototyping of a new Lidar, Led to the design of a laser manager that can accommodate different lidar models. 
 
-2. **Successful Transition to Hardware:** By leading the transition from simulation to hardware for the autonomous robot prototype, you ensured the compatibility and readiness of the system, moving it closer to real-world application.
+2. **Successful Transition to Hardware:** By leading the transition from simulation to hardware for the autonomous robot prototype, I ensured the compatibility and readiness of the system, moving it closer to real-world application.
    
-3. **Innovation Acceleration:** By initiating and managing a rapid prototyping space, you helped accelerate the pace of innovation within the team, fostering creativity and enabling faster development cycles.
+3. **Innovation Acceleration:** By initiating and managing a rapid prototyping space, I helped accelerate the pace of innovation within the team, fostering creativity and enabling faster development cycles.
    
-4. **Comprehensive Skill Utilization:** My work at Avidbots demonstrated the application of various technical skills including programming (C++, Python, Bash), 3D design (OnShape), and theoretical knowledge (Linear Algebra, Probability, Control Systems), reflecting a holistic approach to problem-solving in the realm of autonomy and robotics.
+4. **Comprehensive Skill Utilization:** My work at Avidbots demonstrated the application of various technical skills including programming (C++, Python, Bash), 3D design (OnShape),hardare integration and debugging, and theoretical knowledge (Linear Algebra, Probability, Control Systems), reflecting a overall approach to problem-solving in the realm of autonomy and robotics.
 
 ### Improvements
 
-1. One of the main things I learned at avidbots is to invest the time to do things right once, and automate manual processes, and try not to revisit the problem after it is being solved. For example, automating manual calibration processes, writing software tools to automate everyday tasks and data analysis.
+1. One of the main things I learned at avidbots is to invest in automateing manual processes, such as manual calibrations, and try not to revisit the problem after it is solved and tested.
 
-2. I am also improving on software development and software engineering practices, focusing on improving my multi-threading and design patterns.
+2. I am also improving on software development and software engineering practices, focusing on improving my multi-threading and  multi-threading design patterns.
 
 ### Next Steps
 
-1. I have decided to build my own autonomous robot as A side project, and I am currently working on the design and development of the robot. This will help me improve my skills AND get exposed to all different aspects of robotics and autonomy.
+1. I have decided to build my own autonomous robot as A side project, and I am currently working on the design and development of the robot. This will help me improve my skills in all different aspects of robotics and autonomy.
 
-2. I am also working to better myself as a software engineer get better knowledge on multithreading and design patterns.
+2. I am also looking for opportunities.
