--- a/_posts/2023-05-05-Avidbots.md
+++ b/_posts/2023-05-05-Avidbots.md
@@ -40,11 +40,11 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
    
 3. **Innovation Acceleration:** By initiating and managing a rapid prototyping space, I helped accelerate the pace of innovation within the team, fostering creativity and enabling faster development cycles.
    
-4. **Comprehensive Skill Utilization:** My work at Avidbots demonstrated the application of various technical skills including programming (C++, Python, Bash), 3D design (OnShape),hardare integration and debugging, and theoretical knowledge (Linear Algebra, Probability, Control Systems), reflecting a overall approach to problem-solving in the realm of autonomy and robotics.
+4. **Comprehensive Skill Utilization:** My work at Avidbots demonstrated the application of various technical skills including programming (C++, Python, Bash), 3D design (OnShape), hardware integration and debugging, and theoretical knowledge (Linear Algebra, Probability, Control Systems), reflecting a overall approach to problem-solving in the realm of autonomy and robotics.
 
 ### Improvements
 
-1. One of the main things I learned at avidbots is to invest in automateing manual processes, such as manual calibrations, and try not to revisit the problem after it is solved and tested.
+1. One of the main things I learned at avidbots is to invest in automating manual processes, such as manual calibrations, and try not to revisit the problem after it is solved and tested.
 
 2. I am also improving on software development and software engineering practices, focusing on improving my multi-threading and  multi-threading design patterns.
 
