--- a/_experience/2021-09-30-ASP.md
+++ b/_experience/2021-09-30-ASP.md
@@ -5,8 +5,11 @@ subtitle: Projects as part of ASP.
 thumbnail-img: /assets/img/ASP/IMG_20210820_132441_989.jpg
 tags: [robotics, 3DCAD]
 comments: true
+categories: experience
 ---
-During my tenure at [*Allied Scientific Pro*](https://www.alliedscientificpro.com/) from September 2019 to October 2021, I had the opportunity to work on several cutting-edge projects that pushed the boundaries of technology. In this post, I will delve into the problems we addressed, the actions we undertook to resolve them, and the broader impact these solutions had on various industries.
+During my tenure at [*Allied Scientific Pro*](https://www.alliedscientificpro.com/) from September 2019 to October 2021, I had the opportunity to work on several cutting-edge projects that pushed the boundaries of technology.
+
+In this post, I will delve into the problems we addressed, the actions we undertook to resolve them, and the broader impact these solutions had on various industries.
 
 ### Laser Cleaning System
 
