--- a/_experience/2023-05-05-Avidbots.md
+++ b/_experience/2023-05-05-Avidbots.md
@@ -7,14 +7,17 @@ subtitle: A Reflection on My Role
 thumbnail-img: assets/img/Avidbots/Neo2.png
 tags: [robotics]
 comments: true
+categories: experience
 ---
-Avidbots Corp embarked on a project to create a new robot, where I played a key role in developing a new AMR navigation sensor layout. I integrated various sensors into the Autonomy, calibration, and monitoring systems, requiring expertise in robotic development and software. Additionally, I led the transition of an autonomous robot prototype from simulation to hardware, involving careful coordination and problem-solving across teams.
+Avidbots Corp embarked on a project to create a new robot, where I played a key role in developing a new AMR navigation sensor layout.
+
+ I integrated various sensors into the Autonomy, calibration, and monitoring systems, requiring expertise in robotic development and software. Additionally, I led the transition of an autonomous robot prototype from simulation to hardware, involving careful coordination and problem-solving across teams.
 
 ### Actions
 
 #### Development and Prototyping of AMR Navigation Sensor Layout
 - **3D Design:** Utilized Onshape for 3D design, 3D printing and sheet metal design, prototyping a new layout for AMR navigation sensors: Lidars, 3D sensors and RGB cameras..
-- **Driver Development:** Employed C++ and Python to develop the drivers necessary for integrating RGB cameras, Lidars, and 3D cameras into the system. 
+- **Driver Development:** Employed C++ and Python to develop the ROS drivers necessary for integrating RGB cameras, Lidars, and 3D cameras into the system. 
 - **Sensor Integration:** Integrated various sensors into Autonomy,calibration and monitoring systems.
 - **Sensor Qualification:** Conducted sensor qualification tests to ensure the functionality of the sensors with the system. The system is a safety critical system and the sensors are a key component of the system.
 
@@ -44,12 +47,12 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 ### Improvements
 
-1. One of the main things I learned at avidbots is to invest in automating manual processes, such as manual calibrations, and try not to revisit the problem after it is solved and tested.
+1. One of the main things I learned at avidbots is to invest in automating manual processes, such as manual calibrations. 
 
-2. I am also improving on software development and software engineering practices, focusing on improving my multi-threading and  multi-threading design patterns.
+2. I am also improving on software development and software engineering practices.
 
 ### Next Steps
 
 1. I have decided to build my own autonomous robot as A side project, and I am currently working on the design and development of the robot. This will help me improve my skills in all different aspects of robotics and autonomy.
 
-2. I am also looking for opportunities.
+2. I am also looking for opportunities that allign with my interests, in robtoics or mechatronics domain.
