added more details on experience

--- a/_experience/2021-09-30-ASP.md
+++ b/_experience/2021-09-30-ASP.md
@@ -17,12 +17,12 @@ In this post, I will delve into the problems we addressed, the actions we undert
 Traditional methods of material de-coating are often labor-intensive, time-consuming, and may not be suitable for delicate applications in restoration, aerospace, automotive, and nuclear industries.
 
 #### Action
-We developed a handheld laser cleaning system that utilizes precise laser beams to target specific distances for de-coating materials. 
+i contributed to the mechanical design development of a handheld laser cleaning system that utilizes precise laser beams to target specific distances for de-coating materials. 
 
-[<center>
-<img src="/assets/img/ASP/IMG_20190920_150327.jpg" width="50%" />
-</center>](https://www.youtube.com/watch?v=HVhEawaYqg0&t=1s&ab_channel=AlliedScientificPro){:target="_blank"}
-
+<dev float="center">
+<img src="/assets/img/ASP/IMG_20190920_150327.jpg" width="49%" />
+<img src="/assets/img/ASP/100watt/100watt.png" width="49%" />
+</dev>
 This innovation revolutionized the way materials are cleaned, providing a faster, more efficient, and delicate process, suitable for various industrial applications and used at Canada's parliament.
 
 ### Automating the Laser Cleaning Process
@@ -31,13 +31,25 @@ This innovation revolutionized the way materials are cleaned, providing a faster
 The manual laser cleaning process was marked by human error and inefficiencies. It required a solution that could add precision and automation to the process.
 
 #### Action
-Designed a proof of concept to automate the laser cleaning process using 3D sensors and a robotic arm. This project was successful and funded externally, moving to the prototype phase.
 
-<img src=" /assets/img/LCSprocess.png" width="100%"/>
+Established automation projects for repetitive labour potential for clients teaching robots such as Yasakawa Motoman and Fanuc.
+
+<!-- <img src=" /assets/img/LCSprocess.png" width="100%"/> -->
 [<img src="/assets/img/ASP/robotcleaningmetalpipe.png" width="100%"/>](https://www.youtube.com/watch?v=GXSSPExhgnQ&ab_channel=AlliedScientificPro){:target="_blank"}
 
+
+Led the automation R&D Project of automating the laser cleaning process using 3D sensors and a robotic arm. The proof of concept was successful and funded externally, moving to the prototype phase.
+<dev float="center">
+<img src=" /assets/img/ASP/Screenshot 2023-04-11 144359.png" width="30%"/>
+<img src=" /assets/img/ASP/Screenshot 2023-04-11 144448.png" width="30%"/>
+<img src=" /assets/img/ASP/Screenshot 2023-04-11 145601.png" width="30%"/>
+</dev>
+
+Then I lead the sourcing and installation of a robotic arm, then the integration of Fanuc R-2000ic/210F with moveit.
+This shows one of the tests I was performing.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3UzxizgOhmc?si=5zzQvL9s776D4KeW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 #### Impact
-The automated system significantly improved the cleaning process, reducing human error, saving time, and increasing overall productivity in laser cleaning applications.
+The automated system pushed the boundary of automation, unfortunately I was not there long to witness the end of this potential project.
 
 ### Other Work
 
@@ -50,9 +62,10 @@ Different tasks for different projects.
 
 <dev float="center">
 <img src=" /assets/img/cobot_real.jpg" width="49%"/>
-<img src=" /assets/img/100watt.png" width="49%"/>
 <img src=" /assets/img/Cobot_cart1.png" width="49%"/>
 <img src=" /assets/img/ASP/IMG_20210709_141409.jpg" width="49%"/>
+<img src=" /assets/img/ASP/RAAS.jpg" width="49%"/>
+
 </dev>
 
 #### Impact
