--- a/_experience/2023-05-05-Avidbots.md
+++ b/_experience/2023-05-05-Avidbots.md
@@ -16,19 +16,24 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 ### Actions
 
 #### Development and Prototyping of AMR Navigation Sensor Layout
-- **3D Design:** Utilized Onshape for 3D design, 3D printing and sheet metal design, prototyping a new layout for AMR navigation sensors: Lidars, 3D sensors and RGB cameras..
-- **Driver Development:** Employed C++ and Python to develop the ROS drivers necessary for integrating RGB cameras, Lidars, and 3D cameras into the system. 
+- **3D Design:** Utilized Onshape for 3D design, 3D printing and sheet metal design, prototyping a new layout for a new AMR model navigation sensors: Lidars, 3D sensors and RGB cameras.
+- **Driver Development:** Employed C++ and Python to contribute to the development of ROS drivers necessary for integrating 3D sensors and lidars
 - **Sensor Integration:** Integrated various sensors into Autonomy,calibration and monitoring systems.
 - **Sensor Qualification:** Conducted sensor qualification tests to ensure the functionality of the sensors with the system. The system is a safety critical system and the sensors are a key component of the system.
 
+<dev float="center">
+<img src="/assets/img/Avidbots/kas2.png" width="49%"/>
+<img src="/assets/img/Avidbots/kas1.png" width="49%"/>
+</dev>
+
 #### Robotic Experiment Design
-- Designed and conducted experiments to test the performance of the AMR navigation sensor layout and other perception metrics
+- Continuously integrated different sensors into a testing robot, then designed and conducted experiments to test the performance of the AMR navigation sensor layout and other perception metrics. Activities included environment and test track setup, sensor integration, mapping programming the robot to follow the test track.
 - Conducted 2D and 3D vision data analysis on experiment data and for sensor testing and qualification.
+![Neo2](/assets/img/Avidbots/Neo2.png)
 
 #### Transition from Simulation to Hardware
 - Successfully led the transition of a new autonomous robot prototype from simulation to hardware.
 - Resolved incompatibilities through meticulous data analysis, cross-team coordination, and code updates.
-
 #### Rapid Prototyping Space Management
 - Initiated and managed a space dedicated to rapid prototyping, fostering innovation across software teams and advanced technology teams, and enabling faster development cycles.
 
@@ -37,9 +42,9 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 ### Impact
 
-1. **Enhanced Sensor Integration:** The development and prototyping of a new Lidar, Led to the design of a laser manager that can accommodate different lidar models. 
+1. **Enhanced Sensor Integration:** The development and integration of a new Lidar, Led to the design of a laser manager that can accommodate different lidar models. 
 
-2. **Successful Transition to Hardware:** By leading the transition from simulation to hardware for the autonomous robot prototype, I ensured the compatibility and readiness of the system, moving it closer to real-world application.
+2. **Successful Transition to Hardware:** Fitting avidbots Autonomy into a new robot model and leading the transition from simulation to hardware for the autonomous robot prototype, I ensured the compatibility and readiness of the system, moving it closer to real-world application.
    
 3. **Innovation Acceleration:** By initiating and managing a rapid prototyping space, I helped accelerate the pace of innovation within the team, fostering creativity and enabling faster development cycles.
    
@@ -53,6 +58,8 @@ Avidbots Corp embarked on a project to create a new robot, where I played a key 
 
 ### Next Steps
 
-1. I have decided to build my own autonomous robot as A side project, and I am currently working on the design and development of the robot. This will help me improve my skills in all different aspects of robotics and autonomy.
+1. Avidbots went through restructuring and my position was unfortunately eliminated.
 
-2. I am also looking for opportunities that allign with my interests, in robtoics or mechatronics domain.
+2. I have decided to build my own autonomous robot as a side project, and I am currently working on the design and development of the robot. This will help me improve my skills in all different aspects of robotics and autonomy.
+
+3. I am also looking for opportunities that align with my interests, in robotics or mechatronics domain.
